#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddldata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-04-18
2013-03-22 Andy Salnikov
- fli: update to support HDF5

Tag: V00-04-17
2013-03-22 Andy Salnikov
- gsc16ai.ddl.xml: use new enum-base feature to define attributes to have
  enum types instead of ints

Tag: V00-04-16
2013-03-22 Andy Salnikov
- gsc16ai.ddl.xml: fix numChannels() implementation to be usable with HDF5

Tag: V00-04-15
2013-03-22 Andy Salnikov
- removed version() method from oceanoptics.DataV1 interface, pdsdata
  does not define ths method and number returned from it does not make 
  much sense 

Tag: V00-04-14
2013-03-14 Andy Salnikov
- changes in epics DDL:
  - all dbr_xxx types have default constructor now
  - PvConfigV1 is made value-type, makes it easier to work with

Tag: V00-04-13
2013-03-13 Andy Salnikov
- add config types to pnccd.FullFrame

Tag: V00-04-12
2013-03-12 Andy Salnikov
- add default ctors to lusi value types

Tag: V00-04-11
2013-03-10 Andy Salnikov
- small fixes to schema for HDF5 generator

Tag: V00-04-10
2013-03-04 Andy Salnikov
- fixing type id for quartz.Config class

Tag: V00-04-09
2013-03-04 Andy Salnikov
- update DDL for cspad and acqiris to work with HDF5 generator

Tag: V00-04-08
2013-02-27 Andy Salnikov
- small changes to control.ddl.xml to make it usable for HDF5 generator

Tag: V00-04-07
2013-02-26 Andy Salnikov
- couple of classes in cspad and cspad2x2 packages made value-type
- Evr.PulseConfig auto constuctor replaced with specific arguments
  to take parameters retuurned from non-accessor methods

Tag: V00-04-06
2013-02-26 Andy Salnikov
- few fixes to make it work better with HDF5 generator

Tag: V00-04-05
2013-02-12 Andy Salnikov